field-forms/objects/Form_Question_Catalog__c/Form_Question_Catalog__c.object-meta.xml
<CustomObject>
    <description>Canonical "question as asset" record. Form_Question__c rows are placements (bindings) that reference an entry here. Lets the same question be reused across many templates without copy-paste, with cross-template analytics and centralized edits. See docs/phase-2-pillar-2-question-catalog.md.</description>
    <label>Form Question Catalog</label>
    <nameField>
        <displayFormat>FQC-{000000}</displayFormat>
        <label>Form Question Catalog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Question Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>