field-forms/objects/Form_Question_Catalog__c/fields/Allow_Exception_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_Exception_Override__c</fullName>
    <description>Pillar 5 policy controlling whether a tech can clear a blocking finding for this question via an exception override. "Inherit" defers to the template-level Allow_Exception_Override__c default.</description>
    <inlineHelpText>Inherit (default) uses the template setting. Allow lets the tech mark an exception with just a reason. Require photo additionally requires a photo. Disallow closes the override path so the failure must be remediated.</inlineHelpText>
    <label>Allow Exception Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inherit</fullName>
                <default>true</default>
                <label>Inherit (template default)</label>
            </value>
            <value>
                <fullName>Allow</fullName>
            </value>
            <value>
                <fullName>Require photo</fullName>
            </value>
            <value>
                <fullName>Disallow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>