field-forms/objects/Form_Question_Catalog__c/fields/Calculation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Formula__c</fullName>
    <description>Expression evaluated at runtime for "Calculation" question types. Reference other questions on the same form by Id with {{Id}}. Supports + - * / % (mod), parentheses, and the SUM/AVG/MIN/MAX/COUNT/IF functions. Example: ROUND({{a0K...}} * {{a0K...}}, 2). Errors (missing references, divide-by-zero) render as blank.</description>
    <inlineHelpText>Expression for Calculation-type questions. Reference other answers via {{questionId}}. Supports +-*/%, parens, SUM/AVG/MIN/MAX/COUNT/IF/ROUND.</inlineHelpText>
    <label>Calculation Formula</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>