field-forms/objects/Form_Question_Catalog__c/fields/Date_Time_Save_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Save_Format__c</fullName>
    <label>Date/Time Save Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YYYY</fullName>
            </value>
            <value>
                <fullName>YYYY-MM</fullName>
            </value>
            <value>
                <fullName>YYYY-MM-DD</fullName>
            </value>
            <value>
                <fullName>YYYY-MM-DDThh:mmTZD</fullName>
            </value>
            <value>
                <fullName>YYYY-MM-DDThh:mm:ssTZD</fullName>
            </value>
            <value>
                <fullName>YYYY-MM-DDThh:mm:ss.sTZD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>