field-forms/objects/Form_Question_Catalog__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stable cross-system identifier for this catalog entry. Adapter-driven imports (Steritech, HVAC, etc.) populate this with the source system's question id so re-imports upsert idempotently. Unique because that's how upsert works.</description>
    <externalId>true</externalId>
    <label>External Reference</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>