field-forms/objects/Form_Question_Catalog__c/fields/Failure_Auto_Finding__c.field-meta.xml
<CustomField>
    <fullName>Failure_Auto_Finding__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, FormAnswerScoringTrigger upserts a Form_Finding__c whenever a Form_Answer for this catalog entry evaluates Passed__c = false. Set to false for advisory-only questions where a failure should be scored but should not generate an exception record. Default true matches the common Steritech-style audit pattern.</description>
    <label>Failure Auto-Create Finding</label>
    <type>Checkbox</type>
</CustomField>