field-forms/objects/Form_Question_Catalog__c/fields/Failure_Photo_Required__c.field-meta.xml
<CustomField>
    <fullName>Failure_Photo_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, a Form_Finding__c generated from a failing answer on this question requires a Photo_Attached__c before the form can be submitted (Linked_Form__c.Findings_Blocking_Count__c &gt; 0 hard-blocks submit via the renderer). Independent of Include_Photo__c, which offers a photo regardless of pass/fail.</description>
    <label>Failure Photo Required</label>
    <type>Checkbox</type>
</CustomField>