field-forms/objects/Form_Question_Catalog__c/fields/Failure_Severity__c.field-meta.xml
<CustomField>
    <fullName>Failure_Severity__c</fullName>
    <description>Severity copied onto Form_Finding__c.Severity__c at finding-creation time. Critical findings typically have Failure_Photo_Required__c on; combination defines a "blocking finding" in the renderer's submit guard.</description>
    <label>Failure Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>