field-forms/objects/Form_Question_Catalog__c/fields/Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Font_Color__c</fullName>
    <label>Font Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>