field-forms/objects/Form_Question_Catalog__c/fields/Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Font_Size__c</fullName>
    <label>Font Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>