field-forms/objects/Form_Question_Catalog__c/fields/Inactive_Message__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Message__c</fullName>
    <label>Inactive Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>