field-forms/objects/Form_Question_Catalog__c/fields/Include_Photo__c.field-meta.xml
<CustomField>
    <fullName>Include_Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Photo</label>
    <type>Checkbox</type>
</CustomField>