field-forms/objects/Form_Question_Catalog__c/fields/Is_Curated__c.field-meta.xml
<CustomField>
    <fullName>Is_Curated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Separates the deliberate question library from the auto-created scoring shadows. Auto-creation gives every builder question a 1:1 catalog entry purely to hold scoring config (1,346 entries vs 2 shared, June 2026) — those are NOT curated library content. Set automatically when an entry becomes shared (second binding adopts it) and settable by hand for deliberately authored entries. Drives the Curated Library list view and future similarity ranking. Planned scoring-to-binding wave removes the need for shadows entirely.</description>
    <label>Curated Library Entry</label>
    <type>Checkbox</type>
</CustomField>