field-forms/objects/Form_Question_Catalog__c/fields/Layout_Item__c.field-meta.xml
<CustomField>
    <fullName>Layout_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Layout Item</label>
    <type>Checkbox</type>
</CustomField>