field-forms/objects/Form_Question_Catalog__c/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>