field-forms/objects/Form_Question_Catalog__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Partitioning hook for service-provider customers (e.g. Steritech) who serve many downstream customers within one Salesforce org and need to keep their question catalogs disjoint. Null = global (visible to all templates); any string value = partition key. Templates also gain Scope__c; future write paths (e.g. "Pick from catalog") filter to entries matching the template's Scope__c or null. v1 ships the field only — filtering is implemented as customers need it. Free-form text avoids committing to a specific scoping object until customer pressure emerges; future migration to a Lookup on Catalog_Scope__c is open. See docs/phase-2-pillar-2-question-catalog.md "Customer scoping".</description>
    <label>Scope</label>
    <length>80</length>
    <type>Text</type>
</CustomField>