field-forms/objects/Form_Question_Catalog__c/fields/Slider_Step__c.field-meta.xml
<CustomField>
    <fullName>Slider_Step__c</fullName>
    <inlineHelpText>The step of the slider, examples are .1, 1, or 10.</inlineHelpText>
    <label>Slider Step</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>