field-forms/objects/Form_Question_Catalog__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Comma-separated tags for filtering / grouping the catalog browser. Free-form for v1; may migrate to a junction object if filtering needs index support at scale. See Open questions in the design doc.</description>
    <label>Tags</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>