field-forms/objects/Form_Question_Catalog__c/fields/Text_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Text_Alignment__c</fullName>
    <label>Text Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>start</fullName>
            </value>
            <value>
                <fullName>end</fullName>
            </value>
            <value>
                <fullName>left</fullName>
            </value>
            <value>
                <fullName>right</fullName>
            </value>
            <value>
                <fullName>center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>