field-forms/objects/Form_Question_Catalog__c/fields/Value_Set__c.field-meta.xml
<CustomField>
    <fullName>Value_Set__c</fullName>
    <label>Value Set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>