field-forms/objects/Form_Question_Catalog__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Point value awarded to a Form_Answer when its value satisfies Pass_Criteria__c. Default 1; 0 means informational-only (still tracked as pass/fail but contributes no score). Per Pillar 5 the only supported aggregation is sum-of-weights — averages and weighted-categorical models are deferred (see docs/phase-2-pillar-5-scoring-findings.md).</description>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>