field-forms/objects/Form_Question_Catalog__c/listViews/All_Entries.listView-meta.xml
<ListView>
    <fullName>All_Entries</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Type__c</columns>
    <columns>Scope__c</columns>
    <columns>Weight__c</columns>
    <columns>Failure_Severity__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Entries</label>
</ListView>