field-forms/objects/Form_Question_Catalog__c/listViews/Brand_Scoped.listView-meta.xml
<ListView>
    <fullName>Brand_Scoped</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Scope__c</columns>
    <columns>Type__c</columns>
    <columns>Weight__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scope__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>Brand-Scoped Entries</label>
</ListView>