field-forms/objects/Form_Question_Catalog__c/listViews/Curated_Library.listView-meta.xml
<ListView>
    <fullName>Curated_Library</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Type__c</columns>
    <columns>Scope__c</columns>
    <columns>Weight__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Curated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Curated Library</label>
</ListView>