field-forms/objects/Form_Question_Catalog__c/listViews/Unscored.listView-meta.xml
<ListView>
    <fullName>Unscored</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Type__c</columns>
    <columns>Scope__c</columns>
    <columns>Failure_Severity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Weight__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <label>Unscored (no weight)</label>
</ListView>